[gd_scene load_steps=4 format=2]

[ext_resource path="res://tools/directory_graph/directory_graph.gd" type="Script" id=1]
[ext_resource path="res://tools/directory_graph/editor_theme.tres" type="Theme" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Control




func _on_Load_pressed() -> void:
	var popup := FileDialog.new()
	popup.mode = FileDialog.MODE_OPEN_FILE
	popup.resizable = true
	popup.filters = PoolStringArray([\"*.tscn ; Scene Files\"])
	add_child(popup)
	popup.popup_centered(Vector2(400, 400))
	var path = yield(popup, \"file_selected\")
	popup.queue_free()
	
	$GraphEdit.queue_free()
	yield(get_tree(), \"idle_frame\")
	var new_graph = load(path).instance() as DirectoryGraph
	add_child(new_graph)
	new_graph.name = \"GraphEdit\"
	move_child(new_graph, 0)
	
	$HBoxContainer/AddNode.connect(\"pressed\", new_graph, \"_on_AddNode_pressed\")
	$HBoxContainer/Save.connect(\"pressed\", new_graph, \"_on_Save_pressed\")
"

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 1.0
margin_bottom = 22.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddNode" type="Button" parent="HBoxContainer"]
margin_left = 474.0
margin_right = 549.0
margin_bottom = 22.0
text = "Add Node"
align = 2

[node name="Save" type="Button" parent="HBoxContainer"]
margin_left = 553.0
margin_right = 594.0
margin_bottom = 22.0
text = "Save"
align = 2

[node name="Load" type="Button" parent="HBoxContainer"]
margin_left = 598.0
margin_right = 640.0
margin_bottom = 22.0
text = "Load"
[connection signal="connection_request" from="GraphEdit" to="GraphEdit" method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="GraphEdit" method="_on_GraphEdit_disconnection_request"]
[connection signal="pressed" from="HBoxContainer/AddNode" to="GraphEdit" method="_on_AddNode_pressed"]
[connection signal="pressed" from="HBoxContainer/Save" to="GraphEdit" method="_on_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/Load" to="." method="_on_Load_pressed"]
